--- a/index.html
+++ b/index.html
@@ -25,14 +25,12 @@
             </a>
 
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="/" class="nav-link px-2 link-secondary" id="currentpagelink">Home</a></li>
+                <li><a href="https://studym8ai.app/" class="nav-link px-2 link-dark" id="NOcurrentpagelink">Home</a></li>
                 <li><a href="/download.html" class="nav-link px-2 link-dark" id="difpagelink">Download</a></li>
                 <li><a href="/tutorial.html" class="nav-link px-2 link-dark" id="difpagelink1">Tutorial</a></li>
                 <li><a href="/how_is_this_free.html" class="nav-link px-2 link-dark" id="difpagelink2">How is this free?</a></li>
                 <li><a href="https://linktr.ee/studym8" class="nav-link px-2 link-dark" id="difpagelink3">About</a></li>
             </ul>
-
-
 
             <div>
                 <button class="btn dropdown" data-bs-toggle="dropdown" aria-expanded="false">
@@ -47,15 +45,6 @@
                     <i class="fa fa-moon" aria-hidden="true"></i>
                     <i class="fa fa-sun" aria-hidden="true" style="display: none"></i>
                 </button>
-                <!--
-                <button type="button" class="btn btn-outline-primary me-2">Login</button>
-                <button type="button" class="btn btn-primary">Sign-up</button>
-                -->
-                <!--
-                <button class="btn">
-                    <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="studyM8" data-color="#FFDD00" data-emoji=""  data-font="Poppins" data-text="Support us" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script>
-                </button>
-                -->
             </div>
 
         </div>
@@ -65,104 +54,96 @@
 <body>
   <!-- Page Title -->
   <div class="container">
-    <br>
-    <br>
     <div><img class="logo" src="pngs/StudyMateAI-Logo.png"  style="margin: auto; display: block;" > </div>
     <h1>StudyMateAI</h1>
-    <br>
     <button id="scroll-to-getstarted" class="btn btn-secondary mt-3" style="margin: 0 auto; display: block; font-size: larger;">Quickstart</button>
-    <br>
-    <br>
   </div>
+
+<div class="container">
+  <div class="px-4 pt-5 my-5 text-center border-bottom">
+    <h1 class="display-4 fw-bold">Simple but powerful</h1>
+    <div class="col-lg-6 mx-auto">
+      <p class="lead mb-4">Study-assistence while browsing</p>
+    </div>
+    <div class="overflow-hidden" style="max-height: 100vh;">
+      <div class="container px-5">
+        <img src="/gifs/Simple Product Demonstration.gif" class="img-fluid  shadow-lg mb-4 image-border" alt="Example image" width="90%" height="" loading="lazy">
+      </div>
+    </div>
+  </div>  
+</div>
+
 <div class="container">
     <div class="row">
-        <div class="col">
+        <div class="col px-4 pt-5 my-5 text-center border-bottom">
             <h3><p><b> Too lazy to perpare for your exercise-session?
             <br>We have you covered!</b></p></h3>
-            <img src="pngs/studym8 excercise example.png" class="image-fluid image-border img_autofit" >
+            <img src="pngs/studym8 excercise example.png" class="image-fluid image-border img_autofit shadow-lg mb-4" >
         </div>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
+
     <div class="row">
-        <div class="col" id="useitforany">
+        <div class="col px-4 pt-5 my-5 text-center border-bottom">
             <h3><p> <b> StudyMateAI may be desgined to help you study
             <br> but you can use it for almost anything!</b></p></h3> 
-            <img src="pngs/studym8 creative question example.png" class="image-fluid image-border img_autofit" style="max-width:40%;">
+            <img src="pngs/studym8 creative question example.png" class="image-fluid image-border img_autofit shadow-lg mb-4" style="max-width:30%;">
         </div>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
+
     <div class="row">
-        <div class="col">
+        <div class="col px-4 pt-5 my-5 text-center border-bottom">
           <h3><p> <b> Too lazy to read all of that?</b></p></h3>
-          <img src="pngs/studym8 too lazy to read all that.png" class="image-fluid image-border img_autofit" >
+          <img src="pngs/studym8 too lazy to read all that.png" class="image-fluid image-border img_autofit shadow-lg mb-4" >
         </div>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+
     <div class="row">
-        <div class="col" id="flashcardsexample">
+        <div class="col px-4 pt-5 my-5 text-center border-bottom">
           <h3><p> <b> How about some flashcards for <br>that upcoming biology test?</b></p></h3>
-          <img src="pngs/studym8 flashcards.png" class="image-fluid image-border img_autofit" style="max-width:80%;" >
+          <img src="pngs/studym8 flashcards.png" class="image-fluid image-border img_autofit shadow-lg mb-4" style="max-width:60%;" >
         </div>
-        <div class="col" id="explorefunctions">
+        <div class="col px-4 pt-5 my-5 text-center border-bottom">
           <h3><p> <b> Explore all of our functions <br> to make your life easier!</b></p></h3>
-          <img src="pngs/studym8 explore our functions.png" class="image-fluid image-border img_autofit " style="max-width:80%;" >
+          <img src="pngs/studym8 explore our functions.png" class="image-fluid image-border img_autofit shadow-lg mb-4" style="max-width:60%;" >
         </div>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
+
     <div class="row">
-      <div id="howto"><h1> <b>How to get started:</b></h1><br> <br></div>
-      <div class="col align-self-baseline" id="howto1">
+      <div id="howto"><h1> <b>How to get started:</b></h1></div>
+      <div class="col align-self-baseline px-4 pt-5 my-5 text-center border-bottom">
         <h1 style="text-align: start;"><b>1.</b></h1><h3><b>Register on Openai.com <br>
         or sign in with your account</b></h3>
-        <img src="pngs/How to start 1.png" class="image-fluid image-border img_autofit" style="max-width:80%;">
+        <img src="pngs/How to start 1.png" class="image-fluid image-border img_autofit shadow-lg mb-4" style="max-width:80%;">
       </div>
-      <div class="col" id="howto2">
-        <img src="pngs/How to start 2.png" class="image-fluid image-border img_autofit" >
+      <div class="col px-4 pt-5 my-5 text-center border-bottom">
+        <img src="pngs/How to start 2.png" class="image-fluid image-border img_autofit shadow-lg mb-4" >
       </div>
       <div class="col">
         <h3>  <p> This process requires your email and phonenumber. <br>
         <br>
         This information is needed to verify that you are a real user. In return  you get a free 3-month trial 😎</p></h3>
         <h5><p>Don't worry you do not enter an subscription service after the free trial has ended! For
-          details see: <a href="https://openai.com/api/pricing/">https://openai.com/api/pricing/</a> 
+          details see: <a class="clean_links" href="https://openai.com/api/pricing/">https://openai.com/api/pricing/</a> 
         </p></h5>
       </div>
     </div>
-    <br>
-    <br>
-    <br>
+
     <div class="row">
-      <h4 style="text-align: center;"><p> Only 2 steps left and you are ready to go!</p></h4>
-      <div class="col align-self-baseline">
-        <h1 style="text-align: start;"><b>2.</b></h1><h5><p>Navigate to: <a href="https://platform.openai.com/account/api-keys">https://platform.openai.com/account/api-keys</a> <br>
+      <h4 style="text-align: center; margin-bottom: 0%;"><p> Only 2 steps left and you are ready to go!</p></h4>
+      <div class="col align-self-baseline text-center border-bottom">
+        <h1 style="text-align: start;"><b>2.</b></h1><h5><p>Navigate to: <a class="clean_links" href="https://platform.openai.com/account/api-keys">https://platform.openai.com/account/api-keys</a> <br>
         and click on "Create  new secret key"</p></h5>
-        <img src="pngs/How to start 4.png" class="image-fluid image-border img_autofit" style="max-width:80%;">
+        <img src="pngs/How to start 4.png" class="image-fluid image-border img_autofit shadow-lg mb-4 image-border" style="max-width:80%;">
       </div>
-      <div class="col">
+      <div class="col align-self-baseline px-4 pt-5 my-5 text-center border-bottom">
         <br>
         <h1 style="text-align: start;"><b>3.</b></h1><h4><p> All that's left to do is copy and paste the key into <br>
           the StudyMateAI extension 🚀<br>
         if you have it installed just use <code>ctrl+shift+y</code></p></h5>
-        <img src="pngs/How to start 5.png" class="image-fluid image-border img_autofit" style="max-width:80%;">
-        <br>
-        <br>
+        <img src="pngs/How to start 5.png" class="image-fluid image-border img_autofit shadow-lg mb-4 image-border" style="max-width:60%;">
       </div>
     </div> 
-</div>     
+</div> 
 
 <img class="icon" src=pngs\StudyMateAI-Logo.png width="50" height="50" >
 <div class="mouse-icon">
