--- a/on_install.html
+++ b/on_install.html
@@ -53,17 +53,12 @@
 
 <body>
   <!-- Page Title -->
-  <div class="container">
-    <div><img class="logo" src="pngs/StudyMateAI-Logo.png"  style="margin: auto; display: block;" > </div>
-    <h1>StudyMateAI</h1>
-    <button id="scroll-to-getstarted" class="btn btn-secondary mt-3" style="margin: 0 auto; display: block; font-size: larger;">Quickstart</button>
-  </div>
-
+  
 <div class="container">
   <div class="px-4 pt-5 my-5 text-center border-bottom">
-    <h1 class="display-4 fw-bold">Simple but powerful</h1>
+    <h1 class="display-4 fw-bold">Thank you for installing</h1>
     <div class="col-lg-6 mx-auto">
-      <p class="lead mb-4">Study-assistence while browsing</p>
+      <p class="lead mb-4">You are almost ready to go! Just follow the steps <a class="clean_links" href="#" onclick="window.scroll({top: document.getElementById('How to get started').offsetTop, behavior: 'smooth'});">below</a>. <br> But first a little demonstration:</p>
     </div>
     <div class="overflow-hidden" style="max-height: 100vh;">
       <div class="container px-5">
@@ -73,77 +68,90 @@
   </div>  
 </div>
 
+<!-- Page Content -->
 <div class="container">
-    <div class="row">
-        <div class="col px-4 pt-5 my-5 text-center border-bottom">
-            <h3><p><b> Too lazy to perpare for your exercise-session?
-            <br>We have you covered!</b></p></h3>
-            <img src="pngs/studym8 excercise example.png" class="image-fluid image-border img_autofit shadow-lg mb-4" >
-        </div>
-    </div>
 
-    <div class="row">
-        <div class="col px-4 pt-5 my-5 text-center border-bottom">
-            <h3><p> <b> StudyMateAI may be desgined to help you study
-            <br> but you can use it for almost anything!</b></p></h3> 
-            <img src="pngs/studym8 creative question example.png" class="image-fluid image-border img_autofit shadow-lg mb-4" style="max-width:30%;">
-        </div>
-    </div>
+  <!-- Page Heading -->
+  <h1 id="How to get started" class="my-4">How to get started
+    <small></small>
+  </h1>
 
-    <div class="row">
-        <div class="col px-4 pt-5 my-5 text-center border-bottom">
-          <h3><p> <b> Too lazy to read all of that?</b></p></h3>
-          <img src="pngs/studym8 too lazy to read all that.png" class="image-fluid image-border img_autofit shadow-lg mb-4" >
-        </div>
+  <!-- Step One -->
+  <div class="row">
+    <div class="col-md-7 text-center">
+      <a href="#">
+        <img class="img-fluid rounded mb-3 mb-md-0 image-border-light" src="pngs/How to start 1.png" alt="" style="width: 30%;">
+      </a>
     </div>
-
-    <div class="row">
-        <div class="col px-4 pt-5 my-5 text-center border-bottom">
-          <h3><p> <b> How about some flashcards for <br>that upcoming biology test?</b></p></h3>
-          <img src="pngs/studym8 flashcards.png" class="image-fluid image-border img_autofit shadow-lg mb-4" style="max-width:60%;" >
-        </div>
-        <div class="col px-4 pt-5 my-5 text-center border-bottom">
-          <h3><p> <b> Explore all of our functions <br> to make your life easier!</b></p></h3>
-          <img src="pngs/studym8 explore our functions.png" class="image-fluid image-border img_autofit shadow-lg mb-4" style="max-width:60%;" >
-        </div>
+    <div class="col-md-5 text-c">
+      <h3>Step One</h3>
+      <p>Register on <a class="clean_links" href="https://openai.com/"><b>OpenAI</b></a> or sign in with your account</p>
+      <a class="btn btn-secondary" href="https://openai.com/">Openai.com</a>
     </div>
+  </div>
+  <!-- /.row -->
 
-    <div class="row">
-      <div id="howto"><h1> <b>How to get started:</b></h1></div>
-      <div class="col align-self-baseline px-4 pt-5 my-5 text-center border-bottom">
-        <h1 style="text-align: start;"><b>1.</b></h1><h3><b>Register on Openai.com <br>
-        or sign in with your account</b></h3>
-        <img src="pngs/How to start 1.png" class="image-fluid image-border img_autofit shadow-lg mb-4" style="max-width:80%;">
-      </div>
-      <div class="col px-4 pt-5 my-5 text-center border-bottom">
-        <img src="pngs/How to start 2.png" class="image-fluid image-border img_autofit shadow-lg mb-4" >
-      </div>
-      <div class="col">
-        <h3>  <p> This process requires your email and phonenumber. <br>
-        <br>
-        This information is needed to verify that you are a real user. In return  you get a free 3-month trial 😎</p></h3>
-        <h5><p>Don't worry you do not enter an subscription service after the free trial has ended! For
-          details see: <a class="clean_links" href="https://openai.com/api/pricing/">https://openai.com/api/pricing/</a> 
-        </p></h5>
-      </div>
+  <hr>
+
+  <!-- Step Two -->
+  <div class="row">
+    <div class="col-md-7 text-center">
+      <a href="#">
+        <img class="img-fluid rounded mb-3 mb-md-0 image-border-light" src="pngs/How to start 2.png" alt="" style="width: 30%;">
+      </a>
     </div>
+    <div class="col-md-5">
+      <h3>Step Two</h3>
+      <p>This process requires your email and phonenumber.<br>This information is needed to verify that you are a real user. In return  you get a free 3-month trial 😎
+      Don't worry you do not enter an subscription service after the free trial has ended! For
+      details see: <a class="clean_links" href="https://openai.com/api/pricing/"><b>OpenAI Pricing</b></a> <br>
+      The service of StudyMateAI is completely free, learn more at: <a  class="clean_links" href="https://studym8ai.app/privacy_policy_app.html"><b>Privacy and Pricing</b></a></p>
 
-    <div class="row">
-      <h4 style="text-align: center; margin-bottom: 0%;"><p> Only 2 steps left and you are ready to go!</p></h4>
-      <div class="col align-self-baseline text-center border-bottom">
-        <h1 style="text-align: start;"><b>2.</b></h1><h5><p>Navigate to: <a class="clean_links" href="https://platform.openai.com/account/api-keys">https://platform.openai.com/account/api-keys</a> <br>
-        and click on "Create  new secret key"</p></h5>
-        <img src="pngs/How to start 4.png" class="image-fluid image-border img_autofit shadow-lg mb-4 image-border" style="max-width:80%;">
-      </div>
-      <div class="col align-self-baseline px-4 pt-5 my-5 text-center border-bottom">
-        <br>
-        <h1 style="text-align: start;"><b>3.</b></h1><h4><p> All that's left to do is copy and paste the key into <br>
-          the StudyMateAI extension 🚀<br>
-        if you have it installed just use <code>ctrl+shift+y</code></p></h5>
-        <img src="pngs/How to start 5.png" class="image-fluid image-border img_autofit shadow-lg mb-4 image-border" style="max-width:60%;">
-      </div>
-    </div> 
-</div> 
+      <a class="btn btn-secondary" href="https://openai.com/api/pricing/">OpenAI Pricing</a>
+    </div>
+  </div>
+  <!-- /.row -->
+
+  <hr>
+
+  <!-- Step Three -->
+  <div class="row">
+    <div class="col-md-7 text-center">
+      <a href="#">
+        <img class="img-fluid rounded mb-3 mb-md-0 image-border-light" src="pngs/How to start 4.png" alt="" style="width: 50%;">
+      </a>
+    </div>
+    <div class="col-md-5">
+      <h3>Step Three</h3>
+      <p>Navigate to: <a class="clean_links" href="https://platform.openai.com/account/api-keys"><b>platform.openai.com/account/api-keys</b></a> <br>
+        and click on "Create  new secret key" <br>
+        Copy the key to your clipboard </p>
+      <a class="btn btn-secondary" href="https://platform.openai.com/account/api-keys">Get your Key</a>
+    </div>
+  </div>
+  <!-- /.row -->
+
+  <hr>
+
+  <!-- Step Four -->
+  <div class="row">
+    <div class="col-md-7 text-center">
+      <a href="#">
+        <img class="img-fluid rounded mb-3 mb-md-0 image-border-light" src="pngs/How to start 5.png" alt="" style="width: 30%;">
+      </a>
+    </div>
+    <div class="col-md-5">
+      <h3>Step Four</h3>
+      <p>All that's left to do is copy and paste the key into <br>
+        the StudyMateAI extension 🚀<br>
+        If you have it installed just use <code>ctrl+shift+y</code></p>
+      <a class="btn btn-secondary" href="https://studym8ai.app/tutorial.html">Go to Tutorial</a>
+    </div>
+  </div>
+  <!-- /.row -->
+
+  <hr>
+
 
 <img class="icon" src=pngs\StudyMateAI-Logo.png width="50" height="50" >
 <div class="mouse-icon">
